<resources>
    <string name="app_name">LearnAndroid</string>

    <string name="txt_btn_submit">Submit!</string>
    <string name="action_settings">Settings</string>
    <color name="color_gray">#eee</color>
    <color name="color_yellow">#eee</color>

    <string name="title_activity_result">ResultActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="txt_btn_start">Start</string>
    <string name="txt_btn_pause">Pause</string>
    <string name="txt_btn_reset">Reset</string>
    <string name="txt_input_search_hint">Find...</string>

</resources>
