<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:width="200dp"
        android:background="@color/color_gray"
        android:paddingBottom="@dimen/input_padding_bottom"
        android:paddingTop="@dimen/input_padding_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:width="200dp"
        android:background="@color/color_gray"
        android:paddingBottom="@dimen/input_padding_bottom"
        android:paddingTop="@dimen/input_padding_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"
        android:layout_below="@+id/editText1"
        android:hint="@string/txt_input_search_hint"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_submit"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:paddingTop="@dimen/btn_padding_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"
        android:onClick="onSendValue"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeView"
        android:layout_below="@+id/button"
        android:paddingTop="@dimen/input_padding_top"
        android:paddingBottom="@dimen/input_padding_bottom"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="89dp"
        android:text="00:00:00"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_start"
        android:id="@+id/btn_start"
        android:layout_below="@+id/timeView"
        android:paddingTop="@dimen/btn_padding_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"
        android:onClick="onStartTimerClick"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_pause"
        android:id="@+id/btn_pause"
        android:layout_below="@+id/btn_start"
        android:paddingTop="@dimen/btn_padding_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"
        android:onClick="onPauseTimerClick"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_reset"
        android:id="@+id/btn_reset"
        android:layout_below="@+id/btn_pause"
        android:paddingTop="@dimen/btn_padding_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"
        android:onClick="onResetTimerClick"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false" />


</RelativeLayout>
